Finishing the scripts

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>  
     
-
-
-
+    <button class="piedra" id="piedra">Piedra</button>
+    <button id="papel" class="papel">Papel</button>
+    <button id="tijera">Tijera</button>
+                        
+    <div id="result"></div>
 
 
     <script src="scripts/main.js"></script>
